# warships

./: CMakeLists.txt  Trofimov_Vladislav_lb1.docx  build.sh  input-commands.txt  main.cpp  run-new.txt
controller/: AttackHandler.cpp  AttackHandler.h  BattleController.cpp  BattleController.h  GameController.h  MatchBuilder.cpp  MatchBuilder.h  MatchSettingsController.cpp  MatchSettingsController.h  PlaceShipController.cpp  PlaceShipController.h  ShipManager.cpp  ShipManager.h
controller/game-states/: GameState.cpp  GameState.h  MenuGameState.cpp  MenuGameState.h  OngoingGameState.cpp  OngoingGameState.h  ShutdownGameState.cpp  ShutdownGameState.h  TransitGameState.cpp  TransitGameState.h
controller/ongoing-game-substates/: BattleOngoingGameSubState.cpp  BattleOngoingGameSubState.h  FinishOngoingGameSubState.cpp  FinishOngoingGameSubState.h  InitiateOngoingGameSubState.cpp  InitiateOngoingGameSubState.h  NewMatchSettingsSubState.cpp  NewMatchSettingsSubState.h  OngoingGameSubState.cpp  OngoingGameSubState.h  PauseOngoingGameSubState.cpp  PauseOngoingGameSubState.h
controller/save/: GameSaveCreator.cpp  GameSaveCreator.h  JsonFileHandler.cpp  JsonFileHandler.h  SerializerManager.cpp  SerializerManager.h  SerializerSkillManager.cpp  SerializerSkillManager.h
include/: GameField.h  GameFieldView.h  Segment.h  Ship.h  ShipManager.h  ShipManagerView.h  Structures.h
model/: ComputerPlayer.cpp  ComputerPlayer.h  Player.cpp  Player.h  PlayerFieldState.cpp  PlayerFieldState.h  StateContext.cpp  StateContext.h  Structures.h  SubStateContext.cpp  SubStateContext.h
model/exceptions/: BattleException.cpp  BattleException.h  ShipPlacementException.cpp  ShipPlacementException.h  SkillException.cpp  SkillException.h
model/game/: GameField.cpp  GameField.h  GameStateDTO.cpp  GameStateDTO.h  MatchSettings.cpp  MatchSettings.h  Segment.cpp  Segment.h  Ship.cpp  Ship.h
model/save/: Serializer.cpp  Serializer.h  SerializerFactory.h  SerializerGameField.cpp  SerializerGameField.h  SerializerMatchSettings.cpp  SerializerMatchSettings.h  SerializerSimplifyObjects.cpp  SerializerSimplifyObjects.h  test.cpp
model/skills/: DoubleDamage.cpp  DoubleDamage.h  Scanner.cpp  Scanner.h  ShootingRandomlySkill.cpp  ShootingRandomlySkill.h  Skill.h  SkillFactory.h  SkillManager.cpp  SkillManager.h
src/: GameField.cpp  GameFieldView.cpp  Segment.cpp  Ship.cpp  ShipManager.cpp  Structures.cpp  main.cpp
view/: BattleView.cpp  BattleView.h  FieldCellView.cpp  FieldCellView.h  GameFieldView.cpp  GameFieldView.h  GamePauseView.cpp  GamePauseView.h  PlaceShipControllerView.cpp  PlaceShipControllerView.h  ShipManagerView.cpp  ShipManagerView.h  SkillManagerView.cpp  SkillManagerView.h
view/game-states/: GameView.h  OngoingGameView.cpp  OngoingGameView.h
view/game-substates/: InitiateOngoingGameView.cpp  InitiateOngoingGameView.h
workModelsWarships/: GameController.cpp  GameController.hpp  GameState.cpp  GameState.hpp  GameStateDTO.cpp  GameStateDTO.hpp  GameView.cpp  GameView.hpp  MenuGameState.cpp  MenuGameState.hpp  MenuGameView.cpp  MenuGameView.hpp  OngoingGameState.cpp  OngoingGameState.hpp  OngoingGameView.cpp  OngoingGameView.hpp  ShutdownGameState.cpp  ShutdownGameState.hpp  ShutdownGameView.cpp  ShutdownGameView.hpp  StateContext.cpp  StateContext.hpp  ViewHelper.cpp  ViewHelper.hpp  a.out  main.cpp
workModelsWarships/controller/: GameController.cpp  GameController.h
workModelsWarships/controller/game-states/: GameState.cpp  GameState.h  MenuGameState.cpp  MenuGameState.h  OngoingGameState.cpp  OngoingGameState.h  ShutdownGameState.cpp  ShutdownGameState.h
workModelsWarships/controller/ongoing-game-substates/: BattleController.cpp  BattleController.h  BattleOngoingGameSubstate.cpp  BattleOngoingGameSubstate.h  FinishOngoingGameSubstate.cpp  FinishOngoingGameSubstate.h  InitiateOngoingGameSubstate.cpp  InitiateOngoingGameSubstate.h  PauseOngoingGameSubstate.cpp  PauseOngoingGameSubstate.h  PlaceShipController.cpp  PlaceShipController.h
