cmake_minimum_required(VERSION 3.22.1)
project(cpp_warships)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")

include_directories(.)
include_directories(controller/)
include_directories(library)
include_directories(library/parser)
include_directories(library/parser-builder)
include_directories(library/defaults)
include_directories(model)
include_directories(view)
include_directories(view/game-states)
include_directories(view/model)


include(FetchContent)

FetchContent_Declare(
    nlohmann_json
    GIT_REPOSITORY https://github.com/nlohmann/json.git
    GIT_TAG v3.10.0
)
FetchContent_GetProperties(nlohmann_json)
if(NOT nlohmann_json_POPULATED)
    FetchContent_Populate(nlohmann_json)
    add_subdirectory(${nlohmann_json_SOURCE_DIR} ${nlohmann_json_BINARY_DIR})
endif()


add_executable(cpp_warships main.cpp
        library/ViewHelper.cpp
        library/ViewHelper.h
        library/parser/ParserParameter.h
        library/parser/ParserCommandInfo.h
        library/parser/Parser.h
        library/StringHelper.cpp
        library/StringHelper.h
        library/TypesHelper.cpp
        library/TypesHelper.h
        library/parser-builder/ParserCommandBuilder.h
        library/parser-builder/ConfigCommandBuilder.h
        library/parser-builder/ParserBuilderDirector.h
        library/parser-builder/ParserParameterBuilder.h
        library/parser-builder/DefaultParameterBuilder.h
        library/parser-builder/CommandBuildDirector.h
        library/parser-builder/ParameterBuildDirector.h
        library/parser/__showcase__/parserShowcase.h
        library/parser/__showcase__/parserShowcaseInline.h
        library/defaults/DefaultHelp.cpp
        library/defaults/DefaultHelp.h
        library/defaults/DefaultParserError.cpp
        library/defaults/DefaultParserError.h
        controller/game-states/MenuGameState.cpp
        controller/game-states/MenuGameState.h
        controller/game-states/GameState.cpp
        controller/game-states/GameState.h
        controller/game-states/OngoingGameState.cpp
        controller/game-states/OngoingGameState.h
        controller/game-states/ShutdownGameState.cpp
        controller/game-states/ShutdownGameState.h
        controller/BattleController.cpp
        controller/BattleController.h
        controller/ongoing-game-substates/BattleOngoingGameSubState.cpp
        controller/ongoing-game-substates/BattleOngoingGameSubState.h
        controller/ongoing-game-substates/FinishOngoingGameSubState.cpp
        controller/ongoing-game-substates/FinishOngoingGameSubState.h
        controller/ongoing-game-substates/InitiateOngoingGameSubState.cpp
        controller/ongoing-game-substates/InitiateOngoingGameSubState.h
        controller/ongoing-game-substates/NewMatchSettingsSubState.cpp
        controller/ongoing-game-substates/NewMatchSettingsSubState.h
        controller/ongoing-game-substates/PauseOngoingGameSubState.cpp
        controller/ongoing-game-substates/PauseOngoingGameSubState.h
        controller/PlaceShipController.cpp
        controller/PlaceShipController.h
        controller/MatchSettingsController.cpp
        controller/MatchSettingsController.h
        controller/GameController.h
        model/game/GameField.cpp
        model/game/GameField.h
        model/game/GameStateDTO.cpp
        model/game/GameStateDTO.h
        model/game/MatchSettings.cpp
        model/game/MatchSettings.h
        model/Player.cpp
        model/Player.h
        model/game/Segment.cpp
        model/game/Segment.h
        model/game/Ship.cpp
        model/game/Ship.h
        controller/ShipManager.cpp
        controller/ShipManager.h
        model/StateContext.cpp
        model/StateContext.h
        model/Structures.cpp
        model/Structures.h
        view/game-states/GameView.cpp
        view/game-states/GameView.h
        view/game-states/OngoingGameView.cpp
        view/game-states/OngoingGameView.h
        view/game-states/ShutdownGameView.cpp
        view/game-states/ShutdownGameView.h
        view/game-substates/InitiateOngoingGameView.cpp
        view/game-substates/InitiateOngoingGameView.h
        view/GameFieldView.cpp
        view/GameFieldView.h
        library/defaults/Initials.h
        model/skills/DoubleDamage.h
        model/skills/DoubleDamage.cpp
        model/skills/Scanner.cpp
        model/skills/Scanner.h
        model/skills/ShootingRandomlySkill.cpp
        model/skills/ShootingRandomlySkill.h
        model/skills/SkillManager.h
        model/skills/SkillManager.cpp
        model/skills/SkillFactory.h
        model/skills/Skill.h
        model/skills/Skill.cpp
        model/exceptions/ShipPlacementException.h
        model/exceptions/ShipPlacementException.cpp
        model/exceptions/SkillException.h
        model/exceptions/SkillException.cpp
        model/exceptions/BattleException.h
        model/exceptions/BattleException.cpp
        model/ComputerPlayer.h
        model/ComputerPlayer.cpp
        library/defaults/FieldCoordinateHelper.h
        library/defaults/FieldCoordinateHelper.cpp
        library/defaults/StateMessages.cpp
        library/defaults/StateMessages.h
        controller/ongoing-game-substates/OngoingGameSubState.cpp
        controller/ongoing-game-substates/OngoingGameSubState.h
        model/SubStateContext.cpp
        model/SubStateContext.h
        controller/ongoing-game-substates/NewMatchSettingsSubState.h
        view/FieldCellView.cpp
        view/FieldCellView.h
        view/PlaceShipControllerView.cpp
        view/PlaceShipControllerView.h
        model/PlayerFieldState.cpp
        model/PlayerFieldState.h
        controller/AttackHandler.cpp
        controller/AttackHandler.h
        view/SkillManagerView.cpp
        view/SkillManagerView.h
        model/save/Serializer.h
        controller/save/GameSaveCreator.h
        controller/save/GameSaveCreator.cpp
        controller/save/SerializerManager.cpp
        controller/save/SerializerManager.h
        model/save/SerializerGameField.h
        model/save/SerializerGameField.cpp
        model/save/Serializer.cpp
        model/save/SerializerMatchSettings.h
        model/save/SerializerMatchSettings.cpp
        controller/save/SerializerSkillManager.h
        model/save/SerializerSimplifyObjects.h
        model/save/SerializerSimplifyObjects.cpp
        controller/save/SerializerSkillManager.cpp
        model/save/SerializerFactory.h
        controller/save/JsonFileHandler.h
        controller/save/JsonFileHandler.cpp
        view/ShipManagerView.cpp
        controller/MatchBuilder.cpp
        controller/MatchBuilder.h
        view/GamePauseView.cpp
        view/GamePauseView.h
        view/BattleView.cpp
        view/BattleView.h
        controller/game-states/TransitGameState.cpp
        controller/game-states/TransitGameState.h
        library/parser/command/ParserCommandWrapper.cpp
        library/parser/command/ParserCommandWrapper.h
        library/Command.h
        library/parser/command/CommandParser.cpp
        library/parser/command/CommandParser.h
        library/parser/void/VoidParser.cpp
        library/parser/void/VoidParser.h
        library/input-reader/InputReader.h
        library/parser/ParserCommand.h
        library/parser/command/helpers/HelpCommand.cpp
        library/parser/command/helpers/HelpCommand.h
        library/parser/command/helpers/ErrorCommand.cpp
        library/parser/command/helpers/ErrorCommand.h
        library/parser/command/helpers/ArgumentsErrorCommand.cpp
        library/parser/command/helpers/ArgumentsErrorCommand.h
        library/input-reader/console/ConsoleInputReader.cpp
        library/input-reader/console/ConsoleInputReader.h
        library/input-reader/config/ConfigInputReader.cpp
        library/input-reader/config/ConfigInputReader.h
        library/input-reader/command/CommandInputReader.cpp
        library/input-reader/command/CommandInputReader.h
)

target_link_libraries(cpp_warships PRIVATE nlohmann_json::nlohmann_json)